templates/pod-using-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
    - name: app
      image: busybox
      command: ["sh", "-c", "echo $USERNAME && echo $PASSWORD && sleep 3600"]
